# monadic-party-2018-samples

./: .gitignore  PRESENTATION.md  README.md
01-simple-functions/: .gitignore  Library.fs  functions.fsproj  functions.sln
02-simple-haskell-invocation/: Program.fs  foo.cabal  stack.yaml
03-communicate-with-haskell/: LICENSE  Program.fs  bar.cabal  stack.yaml
03-communicate-with-haskell/src/: Main.hs
04-haskell-in-azure-functions/: 04-haskell-in-azure-functions.fsproj  Library.fs  baz.cabal  stack.yaml
