name:                bar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jakzale/bar#readme
license:             BSD3
license-file:        LICENSE
author:              Jakub Zalewski
maintainer:          jakzale@gmail.com
copyright:           Copyright (c) 2018 Jakub Zalewski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bar
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
